# tiny-actuarial-poc-template

source/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
source/app/: helpers.py  main.py
source/app/domain/: occupancy.py  occupancy_rates.csv  rated_property.py
source/tests/: sample_property.csv  test_helpers.py  test_occupancy.py  test_rated_property.py
